# MedAlarme

./: CMakeLists.txt  LICENSE  README.md  alarm.c  alarm.h  buzzer.c  buzzer.h  diagram.json  display_utils.c  display_utils.h  keypad.c  keypad.h  main.c  oled.c  oled.h  rtc.c  rtc.h  ssd1306_font.h  ssd1306_i2c.c  ui.c  ui.h  utils.c  utils.h  wokwi-project.txt
